; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/rosperf/extr_text.c_TextProc.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/rosperf/extr_text.c_TextProc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32*, i32* }

@DEFAULT_GUI_FONT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [67 x i32] [i32 65, i32 97, i32 66, i32 98, i32 67, i32 99, i32 68, i32 100, i32 69, i32 101, i32 70, i32 102, i32 71, i32 103, i32 72, i32 104, i32 73, i32 105, i32 74, i32 106, i32 75, i32 107, i32 76, i32 108, i32 77, i32 109, i32 78, i32 110, i32 79, i32 111, i32 80, i32 112, i32 81, i32 113, i32 82, i32 114, i32 83, i32 115, i32 84, i32 116, i32 85, i32 117, i32 86, i32 118, i32 87, i32 119, i32 88, i32 120, i32 89, i32 121, i32 90, i32 122, i32 58, i32 63, i32 60, i32 62, i32 48, i32 49, i32 50, i32 51, i32 52, i32 53, i32 54, i32 55, i32 56, i32 57, i32 0], align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @TextProc(i8* %0, %struct.TYPE_3__* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32* null, i32** %9, align 8
  %11 = load i32, i32* @DEFAULT_GUI_FONT, align 4
  %12 = call i32 @GetStockObject(i32 %11)
  store i32 %12, i32* %10, align 4
  store i32 0, i32* %7, align 4
  br label %13

13:                                               ; preds = %55, %3
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp ult i32 %14, %15
  br i1 %16, label %17, label %65

17:                                               ; preds = %13
  %18 = load i32, i32* %7, align 4
  %19 = and i32 %18, 65536
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %17
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 3
  %24 = load i32*, i32** %23, align 8
  br label %29

25:                                               ; preds = %17
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 2
  %28 = load i32*, i32** %27, align 8
  br label %29

29:                                               ; preds = %25, %21
  %30 = phi i32* [ %24, %21 ], [ %28, %25 ]
  store i32* %30, i32** %9, align 8
  %31 = load i32*, i32** %9, align 8
  %32 = load i32, i32* %10, align 4
  %33 = call i32 @SelectObject(i32* %31, i32 %32)
  store i32 0, i32* %8, align 4
  br label %34

34:                                               ; preds = %50, %29
  %35 = load i32, i32* %8, align 4
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = icmp slt i32 %35, %38
  br i1 %39, label %40, label %44

40:                                               ; preds = %34
  %41 = load i32, i32* %7, align 4
  %42 = load i32, i32* %6, align 4
  %43 = icmp ult i32 %41, %42
  br label %44

44:                                               ; preds = %40, %34
  %45 = phi i1 [ false, %34 ], [ %43, %40 ]
  br i1 %45, label %46, label %55

46:                                               ; preds = %44
  %47 = load i32*, i32** %9, align 8
  %48 = load i32, i32* %8, align 4
  %49 = call i32 @TextOut(i32* %47, i32 0, i32 %48, i8* bitcast ([67 x i32]* @.str to i8*), i32 66)
  br label %50

50:                                               ; preds = %46
  %51 = load i32, i32* %7, align 4
  %52 = add i32 %51, 1
  store i32 %52, i32* %7, align 4
  %53 = load i32, i32* %8, align 4
  %54 = add nsw i32 %53, 15
  store i32 %54, i32* %8, align 4
  br label %34

55:                                               ; preds = %44
  %56 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %57 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %56, i32 0, i32 1
  %58 = load i32, i32* %57, align 4
  %59 = load i32, i32* @TRUE, align 4
  %60 = call i32 @InvalidateRect(i32 %58, i32* null, i32 %59)
  %61 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %62 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %61, i32 0, i32 1
  %63 = load i32, i32* %62, align 4
  %64 = call i32 @UpdateWindow(i32 %63)
  br label %13

65:                                               ; preds = %13
  ret void
}

declare dso_local i32 @GetStockObject(i32) #1

declare dso_local i32 @SelectObject(i32*, i32) #1

declare dso_local i32 @TextOut(i32*, i32, i32, i8*, i32) #1

declare dso_local i32 @InvalidateRect(i32, i32*, i32) #1

declare dso_local i32 @UpdateWindow(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
